  information about the remote system. [Aleksandar Nikolic]

o [NSE] Added tls-nextprotoneg script which enumerates a TLS server's supported
  protocols by using the next protocol negotiation extension.
  [Hani Benhabiles]

o [NSOCK] Fixed an epoll-engine-specific bug. The engine didn't recognized FDs
  that were internally closed and replaced by other ones. This happened during
  reconnect attempts. [Henri Doreau]

o Added support for log type bitmasks in log_vwrite(). Also replaced a fatal()
  statement by an assert(0) to get rid of a possible infinite call loop when
  passed an invalid log type. [Henri Doreau]

o Added handling for the unexpected error WSAENETRESET (10052). This error is
  currently wrapped in the ifdef for WIN32 as there error appears to be unique
  to windows [Sean Rivera]

o [NSE] Added http-sitemap-generator script which spiders a web server
  and displays its directory structure along with number and types
  of files in each folder. [Piotr Olma]

o [NSE] Added a brute script for new Metasploit RPC interface as 
  metasploit-msgrpc-brute. [Aleksandar Nikolic]

o [NSE] Added the script firewall-bypass which detects a vulnerability in
  netfilter and other firewalls that use helpers to dynamically open ports for
  protocols such as ftp and sip.  [Hani Benhabiles]

o Removed the log_errors variable. (Treating it as true everywhere). This
  change did not effect the support for older scripts that still call it.
  However nmap --log-errors now does nothing. Also updated the documentation to
  reflect this change[Sean Rivera]

o Reduced the size of Port structures by about two thirds (from 176 to
  64 bytes on x86_64). They had accidentally been made bigger than
  they should during the IPv6 code merge. [David Fifield]

o [NSE] Added default values for Expires, Call-ID, Allow and Content-Length
  headers in SIP requests and removed redundant code in sip library.
  [Hani Benhabiles]
